--- a/index.html
+++ b/index.html
@@ -8,13 +8,103 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
+      <nav class="sticky-top">
+          <ul class="list-inline border px-5 bg-black">
+              <li class="list-inline-item pr-3">
+                  <h2>Sports Evolve</h2>
+              </li>
+              <li class="list-inline-item pr-3">HOME</li>
+              <li class="list-inline-item pr-3">NEWS</li>
+              <li class="list-inline-item pr-3">LIFESTYLE</li>
+              <li class="list-inline-item pr-3">FASHION</li>
+              <li class="list-inline-item pr-3">NATURE</li>
+              <li class="list-inline-item pr-3">HEALTH</li>
+              <li class="list-inline-item pr-3">TRAVEL</li>
+              <a id="icon1" href="twitter.com" >
+                  <i class="fa fa-twitter"></i>
+              </a>
+              <a id="icon2" href="facebook.com" >
+                  <i class="fa fa-facebook"></i>
+              </a>
+              <a id="icon2" href="youtube.com" >
+                  <i class="fa fa-youtube"></i>
+              </a>
+          </ul>
+      </nav>
+
+      <div class="flex-container">
+          <div class="col-12 col-lg-8">
+              <img style="float: left;" src="/images/l1.jpg">
+              <p class="font-weight-bold">MANCHESTER UNITED TO CONSIDER SIGNING DONNY VAN DE BEEK OVER JACK GREALISH</p>
+              <p> FeaturedImageCredit: The SunAccording to Sportsmole, Manchester United will consider...</p>
+              <img style="float: left; margin-top: 20px;" src="/images/l2.jpg">
+              <p style="margin-top: 180px;" class="font-weight-bold">PEP GUARDIOLA CONFIRMS ERIC GARCIA'S REFUSAL OF A CONTRACT EXTENSION</p>
+              <p>According to Man City manager, Pep Guardiola, Eric Garcia has refused to extend his...</p>
+              <img style="float: left; margin-top: 20px;" src="/images/l3.jpg">
+              <p style="margin-top: 170px;" class="font-weight-bold">MAN UTD ARE JUST FOUR GAMES FROM EUROPA LEAGUE TROPHY</p>
+              <p>Man Utd coach, Ole Gunnar, had a fantastic run in the recent completed EPL season finishing...</p>
+              <img style="float: left; margin-top: 20px;" src="/images/l4.jpg">
+              <p style="margin-top: 170px;" class="font-weight-bold">RAUL JIMENEZ TO MAN UTD AS WOLVES ARE CLOSE TO COMPLETING A £27M DEAL</p>
+              <p>Manchester United are looking for a world-class centre forward that will give them options...</p>
+              <img style="float: left; margin-top: 20px;" src="/images/l5.jpg">
+              <p style="margin-top: 180px;" class="font-weight-bold">MESSI EYES LEEDS COACH TO REPLACE QUIQUE SETIEN</p>
+              <p>Barcelona did not perform well to their expectations this season, with Messi openly showing...</p>
+          </div>
+          <div class="col-12 col-lg-4">
+            <img style="float: left;" src="/images/r1.jpg">
+            <p>Jimenez would be a perfect option for them looking at his recent performances in the Premier League.</p>
+            <hr>
+            <img style="float: left;" src="/images/r2.jpg">
+            <p>At 18 years of age, Mason Greenwood has achieved more compared to any other Man Utd player.</p>
+            <hr>
+            <img style="float: left;" src="/images/r3.jpg">
+            <p>Sancho's move to Man Utd will be most expensive signing in the English Premier League this season.</p>
+            <hr>
+            <img style="float: left;" src="/images/r4.jpg">
+            <p>According to Sportsmole, Manchester United will consider signing Dutch midfielder Donny Van de Beek over Aston Villa's Jack Grealish this summer.</p>
+            <hr>
+            <img style="float: left;" src="/images/r5.jpg">
+            <p>Man Utd lost a perfect chance of getting into the top 3 after drawing with Southampton yesterday.</p>
+            <hr>
+            <img style="float: left;" src="/images/r6.jpg">
+            <p>Ole Gunnar's dream is to build a team that will be able to win titles next season.</p>
+            <hr>
+            <img style="float: left;" src="/images/r7.jpg">
+            <p>Man Utd will face LASK Linz tomorrow in a second leg match in the round-of-16 tie. United will go into the game with a 5-0 lead.</p>
+            <hr>
+            <img style="float: left;" src="/images/r8.jpg">
+            <p>From the report, Havertz made the decision especially after Bayer Leverkusen failed to qualify for the Champions League slot.</p>
+          </div>
+      </div>
+      <div class="row">
+            <div class="col1">
+                <p>About Us</p>
+                <h4>Inspiro</h4>
+                <p>Inspiro is modern magazine blogger template which focuses</p>
+                <p> on lifestyle news, health, and entertainment</p>
+            </div>
+            <div class="col2">
+                <p id="news">Popular Posts</p>
+                <img id="im" src="/images/r1.jpg">
+                <img id="im" src="/images/r2.jpg">
+                <img id="im" src="/images/r3.jpg">
+            </div>
+            <div class="col3">
+                <p id="news">Newsletter</p>
+            </div>
+      </div>
+      <footer>
+          <p>Copyright © 2015 Sports Evolve | Distributed By My Blogger Themes | Designed By VeeThemes.com</p>
+      </footer>
       
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+      <!-- Optional JavaScript -->
+      <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
