--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </nav>
 
       <div class="flex-container">
-          <div class="col-12 col-lg-8">
+          <div class="col-12 col-sm-12 col-md-12 col-lg-8">
               <img style="float: left;" src="/images/l1.jpg">
               <p class="font-weight-bold">MANCHESTER UNITED TO CONSIDER SIGNING DONNY VAN DE BEEK OVER JACK GREALISH</p>
               <p> FeaturedImageCredit: The SunAccording to Sportsmole, Manchester United will consider...</p>
@@ -54,7 +54,7 @@
               <p style="margin-top: 180px;" class="font-weight-bold">MESSI EYES LEEDS COACH TO REPLACE QUIQUE SETIEN</p>
               <p>Barcelona did not perform well to their expectations this season, with Messi openly showing...</p>
           </div>
-          <div class="col-12 col-lg-4">
+          <div class="col-12 col-sm-12 col-md-12 col-lg-4">
             <img style="float: left;" src="/images/r1.jpg">
             <p>Jimenez would be a perfect option for them looking at his recent performances in the Premier League.</p>
             <hr>
